After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688038 - inconsistent string: plugin vs decoders
inconsistent string: plugin vs decoders
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-11-10 12:58 UTC by Pavol Klačanský
Modified: 2012-11-23 15:27 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Pavol Klačanský 2012-11-10 12:58:30 UTC
#: ../src/backend/bacon-video-widget.c:3405
#: ../src/backend/bacon-video-widget.c:3413
#, c-format
msgid "The playback of this movie requires a %s plugin which is not installed."
msgid_plural ""
"The playback of this movie requires the following decoders which are not "
"installed:\n"
"\n"
"%s"

why is it once "plugin" and once "decoder"?
Comment 1 Philip Withnall 2012-11-23 09:10:56 UTC
(In reply to comment #0)
> why is it once "plugin" and once "decoder"?

‘plugin’ refers to a GStreamer plugin (e.g. as installed by the gstreamer-plugins-good package). ‘decoder’ refers to a specific codec implementation. Each GStreamer plugin provides multiple decoders (and encoders, etc.).

The parameter string is typically something like ‘XVID MPEG-4 decoder’ or ‘video/x-asf-unknown decoder’.

I’ve changed ‘decoder’ to ‘plugin’ in the plural message string.

commit c87dba5c8a2317bfb4b1eb46e265ae0a13807055
Author: Philip Withnall <philip@tecnocode.co.uk>
Date:   Fri Nov 23 09:10:20 2012 +0000

    backend: Make missing plugin messages more consistent
    
    Always refer to missing plugins as ‘plugins’ rather than ‘decoders’.
    
    Closes: https://bugzilla.gnome.org/show_bug.cgi?id=688038

 src/backend/bacon-video-widget.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Comment 2 Pavol Klačanský 2012-11-23 15:27:57 UTC
thanks