backend: Make missing plugin messages more consistent

Always refer to missing plugins as ‘plugins’ rather than ‘decoders’.

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=688038